--- a/styles.css
+++ b/styles.css
@@ -22,17 +22,11 @@ body {
     --secondaryText: var(--secondaryTextDarkMode);
 }
 
-body.light_mode {
-    --background: var(--white);
-    --lightBackground: var(--lightgrey);
-    --text: var(--textLightMode);
-    --secondaryText: var(--secondaryTextLightMode);
-}
-
 body {
     width: 100%;
     min-height: 100vh;
     margin: 0;
+    padding: 0;
     background: var(--background);
     color: var(--text);
     font-size: var(--textSize);
@@ -58,8 +52,6 @@ section {
     position: relative;
     width: 100%;
     height: 100vh;
-    /* overflow: hidden; */
-    /* overflow: visible; */
 }
 
 /* Scrollbar */
@@ -68,9 +60,6 @@ section {
 body::-webkit-scrollbar {
     width: 21px;
     height: 10px;
-    /* border: none; */
-    /* border: 2px solid var(--background);
-    border: 2px solid var(--background); */
 }
   
 body::-webkit-scrollbar-track {
@@ -82,7 +71,6 @@ body::-webkit-scrollbar-track {
 body::-webkit-scrollbar-thumb {
     background: var(--text); 
     border-radius: 20px;
-    /* border-right: 5px solid var(--background); */
     border: 8px solid var(--background);
 }
   
