--- a/assets/styles/navbar.css
+++ b/assets/styles/navbar.css
@@ -67,7 +67,7 @@
     margin-left: auto; /* stick to the right */
     gap: 8px;
     color: var(--secondaryText);
-    font-size: var(--textSizeSmall);
+    font-size: var(--textSize);
 
     @media only screen and (max-width: 1000px) {
         display: none;
@@ -75,6 +75,10 @@
 
     p {
         cursor: pointer;
+
+        &.active {
+            color: var(--text);
+        }
     }
 
     .language_indicator {
@@ -87,12 +91,12 @@
         .active {
             height: 2px;
             width: 20px;
-            background: var(--secondaryText);
+            background: var(--text);
             transition: transform .5s cubic-bezier(.63,-0.43,.3,1);
         }
     }
 
-    &:has(.language_fr:hover) .active {
+    &:has(.language_fr:hover) .language_indicator .active {
         transform: translate(100%);
     }
  
