--- a/assets/styles/hobby_section.css
+++ b/assets/styles/hobby_section.css
@@ -24,9 +24,10 @@
     padding: 0 var(--padding);
     transform: translateY(-150%);
 
-    /* border: 1px solid red; */
+    border: 1px solid red;
 
     div {
+        /* border: 1px solid red; */
         width: 100%;
 
         img {
@@ -37,6 +38,25 @@
 
         p {
             color: var(--secondaryText);
+        }
+    }
+
+    .more {
+        cursor: pointer;
+
+        img {
+            object-fit: scale-down;
+            object-position: 0% 20%;
+            padding: 20%;
+            border: 1px solid var(--secondaryText);
+        }
+
+        p {
+            color: var(--secondaryText);
+            text-align: center;
+            font-size: var(--textSizeBig);
+            text-transform: uppercase;
+            transform: translateY(-350%);
         }
     }
 
@@ -59,6 +79,7 @@
         object-position: 50% 55%;
         opacity: 0.6
     }
+
 }
 
 #hobby_section .section_info {
@@ -151,6 +172,7 @@
             background: none;
             text-transform: uppercase;
             font-size: var(--textSizeBig);
+            color: var(--text);
 
             margin-bottom: calc(var(--padding) / 2);
         }
