--- a/assets/styles/navbar.css
+++ b/assets/styles/navbar.css
@@ -113,6 +113,7 @@
     align-items: center;
     overflow: hidden;
     min-width: min-content;
+    background-color: var(--background);
 
     @media only screen and (max-width: 1000px) {
         display: none;
@@ -131,7 +132,7 @@
     }
 
     p {
-        color: var(--text);
+        color: hsl(0, 0%, 90%);
         margin: 0;
         mix-blend-mode: difference;
     }
@@ -142,9 +143,11 @@
             right: -5%;
         }
     }
-
 }
  
+body.light #navbar .nav_contactme p {
+    color: hsl(0, 0%, 80%) !important;
+}
 
 
 #hamburger_menu {
